# yanxu

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  ROADMAP_1_0.md  SECURITY.md  build.rs  deny.toml  言序.toml
.github/workflows/: auto-release.yml  ci.yml  codeql.yml  dynamic-safety.yml  package-release.yml  quality.yml  release.yml
compat/0.3/: 基础与函数.yx
compat/0.4/: 类型与对象.yx
compat/0.5/: 容器与错误.yx
compat/0.6/: 工具.yx  模块与协议.yx
compat/0.7/: 标准库.yx
compat/0.8/: 异步任务.yx
compat/0.9/: 稳定行为.yx
compat/1.0/: 稳定接口.yx
compat/1.1/: 二进制网络基础.yx  套接字标准库.yx  对象类型与网络错误.yx  扩展标准库.yx
compat/1.2/: 桌面外部网页.yx
crates/yanxu-package/: Cargo.toml  RELEASE_NOTES_1.1.10.md  RELEASE_NOTES_1.1.11.md  RELEASE_NOTES_1.1.12.md  RELEASE_NOTES_1.1.13.md  RELEASE_NOTES_1.1.14.md  RELEASE_NOTES_1.1.15.md  RELEASE_NOTES_1.1.16.md  RELEASE_NOTES_1.1.17.md  RELEASE_NOTES_1.1.18.md  RELEASE_NOTES_1.1.19.md  RELEASE_NOTES_1.1.20.md  RELEASE_NOTES_1.1.8.md  RELEASE_NOTES_1.1.9.md  RELEASE_NOTES_1.2.0.md
crates/yanxu-package/src/: lib.rs  package.rs  path_policy.rs  permissions.rs  storage.rs  subprocess.rs
crates/yanxu-package/src/package/: archive.rs
docs/design/: module-qualified-types.md
docs/project/: status.md
docs/project/archive/: DEVELOPMENT_0_3_TO_0_7.md  ROADMAP_0_8_TO_1_0.md
examples/: 1.1.4二进制基础.yx  1.1套接字.yx  1.1标准库.yx  VM入门.yx  元组与切片.yx  初见.yx  后1.0标准库.yx  对象与类型判断.yx  异步任务.yx  扩展标准库.yx  数据与错误.yx  数据管道.yx  标准库.yx  模块化.yx  类与类型.yx  闭包.yx
examples/embedding/: README.md
examples/embedding/c-host/: README.md  main.c
examples/embedding/rust-host/: Cargo.toml
examples/embedding/rust-host/src/: main.rs
examples/embedding/wasi-host/: Cargo.toml
examples/embedding/wasi-host/src/: main.rs
examples/gui/: README.md  主.yx  言序.toml
examples/module_oop/: README.md  base.yx  controls.yx  facade.yx  main.yx
examples/native-extension-rust/: Cargo.toml
examples/native-extension-rust/src/: lib.rs
examples/native-extension-v2-rust/: Cargo.toml
examples/native-extension-v2-rust/src/: lib.rs
examples/模块/: 数术.yx
fuzz/: Cargo.toml  README.md
fuzz/corpus/application_archive/: unknown-version.yxb
fuzz/corpus/bytecode_archive/: unknown-version.json
fuzz/corpus/engineering_protocol/: handshake.json
fuzz/corpus/formatting/: deep-nesting.yx  nested.yx  single-element-tuple.yx
fuzz/corpus/frontend/: async.yx
fuzz/corpus/lockfile/: minimal.toml
fuzz/corpus/manifest/: minimal.toml
fuzz/corpus/native_library/: invalid-header
fuzz/fuzz_targets/: application_archive.rs  bytecode_archive.rs  engineering_protocol.rs  formatting.rs  frontend.rs  lockfile.rs  manifest.rs  native_library.rs
include/: yanxu.h  yanxu_native.h
proposals/: README.md  YXP-0001-桌面外部网页.md
reference/: bytecode-v2.md  gui-architecture.md  gui-bundle.md  gui-security.md  migration-1.1.10.md  migration-1.1.11.md  migration-1.1.12.md  migration-1.1.13.md  migration-1.1.14.md  migration-1.1.15.md  migration-1.1.16.md  migration-1.1.17.md  migration-1.1.18.md  migration-1.1.19.md  migration-1.1.20.md  migration-1.1.5.md  migration-1.1.6.md  migration-1.1.7.md  migration-1.1.8.md  migration-1.1.9.md  migration-1.2.0.md  migration-module-qualified-types.md  module-api-v2.md  native-abi-v1.md  native-abi-v2.md
reference/共享工具/: 主.yx  言序.toml
reference/诗笺台/: README.md  言序.toml
reference/诗笺台/src/: 主.yx  领域.yx
reference/诗笺台/tests/: 主流程.yx  错误路径.yx
reference/账册分析/: README.md  言序.toml
reference/账册分析/src/: 主.yx  账册.yx
reference/账册分析/tests/: 空账册.yx  统计.yx
schemas/: compatibility-report-v1.json  module-api-v2.json  stdlib-api-v1.json  test-report-v1.json
scripts/: check-coverage.sh  generate-build-metadata.sh  generate-package-build-metadata.sh  generate-sbom.sh  install.ps1  install.sh  verify-yanxu-package-contents.sh
spec/: 基础.yx
spec/language/v1/: README.md  execution-and-compatibility.md  formats.md  lexical-and-grammar.md  modules-tasks-errors.md  types-and-objects.md
src/: application.rs  ast.rs  benchmark.rs  budget.rs  build_info.rs  bytecode.rs  cli_info.rs  cli_package.rs  compatibility.rs  debugger.rs  docgen.rs  embed.rs  engineering.rs  ffi.rs  formatter.rs  fuzzing.rs  gui_bundle.rs  host_events.rs  host_handles.rs  interpreter.rs  lexer.rs  lib.rs  lsp.rs  main.rs  migration.rs  native_abi.rs  native_abi_v2.rs  package.rs  parser.rs  permissions.rs  repl.rs  resolver.rs  semantic.rs  source.rs  stdlib.rs  testing.rs  token.rs  type_checker.rs  type_model.rs  vm.rs  (+1 more)
src/vm/: native.rs
stdlib/: api-v1.json
stdlib/snapshots/: 1.2.0-api-v1.json
tests/: application_cli.rs  language.rs  module_source_capability.rs  native_extension.rs  native_extension_v2.rs  project_status.rs  reserved_package_modules.rs  semver_surface.rs  vm_consistency.rs  windows_runtime_stack.rs
tests/fixtures/: 坏模块.yx  坏模块入口.yx  循环乙.yx  循环甲.yx  私有入口.yx  私有模块.yx  类型入口.yx  类型模块.yx  缓存入口.yx  缓存模块.yx
tests/fixtures/vm_consistency/cross_module_inheritance/: base.yx  main.yx
tests/fixtures/vm_consistency/cross_module_private_access/: base.yx  main.yx
tests/fixtures/vm_consistency/cross_module_protocol/: base.yx  main.yx
tests/fixtures/vm_consistency/cross_module_super_dispatch/: base.yx  helper.yx  main.yx
tests/fixtures/vm_consistency/public_module_reexport/: facade.yx  inner.yx  main.yx  outer.yx
tests/fixtures/vm_consistency/qualified_nested_types/: base.yx  main.yx
tests/fixtures/vm_consistency/qualified_type_test/: base.yx  main.yx
tests/fixtures/vm_consistency/reexported_inheritance/: base.yx  facade.yx  main.yx
tests/fixtures/vm_consistency/same_short_name_types/: main.yx
tests/fixtures/yxb/: README.md  legacy-v1-bytecode.yxb  legacy-v1-source.yx
tests/legacy/0.7/: 主.yx  言序.toml
tests/support/: mod.rs
tree-sitter-yanxu/: grammar.js  package-lock.json  package.json  tree-sitter.json
tree-sitter-yanxu/queries/: highlights.scm
tree-sitter-yanxu/src/: grammar.json  node-types.json  parser.c
tree-sitter-yanxu/test/corpus/: language.txt
