[package]
name = "yanxu"
version = "1.1.6"
edition = "2024"
description = "言序：以 Rust 编写的文言风格解释型编程语言"
license = "MIT"
repository = "https://github.com/YanXuLang/yanxu"
homepage = "https://yanxu.dev/"
documentation = "https://docs.yanxu.dev/"
readme = "README.md"
keywords = ["language", "interpreter", "chinese", "programming-language"]
categories = ["compilers", "command-line-utilities"]
include = [
    "/src/**",
    "/crates/**",
    "/tests/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/build.rs",
    "/README.md",
    "/COMPATIBILITY.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/examples/**",
    "/spec/**",
    "/schemas/**",
    "/compat/**",
    "/stdlib/**",
    "/include/**",
    "/fuzz/**",
    "/proposals/**",
    "/reference/**",
    "/tree-sitter-yanxu/**",
    "!/examples/**/target/**",
    "!/fuzz/target/**",
    "!/tree-sitter-yanxu/node_modules/**",
    "/言序.toml",
]

[workspace]
members = ["crates/yanxu-package", "examples/native-extension-rust"]
resolver = "3"

[lib]
name = "yanxu"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "yanxu"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
flate2 = "1"
getrandom = "0.2"
hmac = "0.12"
httpdate = "1"
regex = "1"
semver = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
tar = "0.4"
url = "2"
yanxu-package = { path = "crates/yanxu-package", version = "1.1.6" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
libloading = "0.8"
rustyline = "18.0.1"
ureq = { version = "3.3", default-features = false, features = ["rustls"] }
