[package]
name = "yanxu-package"
version = "1.1.17"
edition = "2024"
description = "言序清单、锁文件、权限与可复现依赖解析核心"
license = "MIT"
repository = "https://github.com/YanXuLang/yanxu"

[dependencies]
flate2 = "1"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
toml = "0.8"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
fs2 = "0.4"
