[package]
name = "yanxu-package"
version = "1.1.18"
edition = "2024"
rust-version = "1.89"
description = "言序清单、锁文件、权限与可复现依赖解析核心"
license = "MIT"
repository = "https://github.com/YanXuLang/yanxu"
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/src/**/*.rs",
]

[dependencies]
flate2 = "1"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
toml = "0.8"
unicode-normalization = "0.1.25"
url = "2"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
cap-fs-ext = "=3.4.5"
cap-std = "=3.4.5"
fs2 = "0.4"

[target.'cfg(target_os = "wasi")'.dependencies]
rustix = { version = "=1.1.4", features = ["fs"] }

[target.'cfg(all(unix, not(target_os = "wasi")))'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
